# ulco-hpc

./: .gitignore
tp1/: CMakeLists.txt  ps.cpp
tp2/: CMakeLists.txt  exo1.cpp  exo2.cpp  exo3.cpp  exo4.cpp
tp3/V1/: CMakeLists.txt
tp3/V1/scenes/: obj2nff.cpp~  scene02.txt~  scene03.txt~
tp3/V1/src/: Camera.cpp  Camera.hpp  Image.hpp  Plan.hpp  Scene.cpp  Scene.hpp  Source.hpp  lr.cpp
tp3/V1/src/infra/: Intersection.hpp  Point.hpp  Vecteur.cpp  Vecteur.hpp
tp3/V1/src/materiel/: Couleur.hpp
tp3/V1/src/objects/: Objet.hpp  Rayon.hpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
tp4/: Makefile
tp4/src/: hpcOpenmpSchedule.cpp
tp5/: CMakeLists.txt  README.md
tp5/src/: common.cpp  exo1.cpp  exo2.cpp
